--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,5 @@
 {
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/"
-    }
+  "routes": [
+    { "src": "/(.*)", "dest": "/server/node-build.mjs" }
   ]
 }
