Fix Vercel static file serving with proper routing

--- a/vercel.json
+++ b/vercel.json
@@ -10,8 +10,12 @@
       "dest": "/dist/server/production.mjs"
     },
     {
-      "src": "/(?!api)",
-      "dest": "/dist/server/production.mjs"
+      "src": "/dist/spa/(.*)",
+      "dest": "/dist/spa/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/dist/spa/index.html"
     }
   ]
 }
