--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,4 @@
 {
-  "buildCommand": "pnpm build",
-  "framework": "vite",
-  "env": {
-    "NODE_ENV": "production"
-  }
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist"
 }
