--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
-  "buildCommand": "npm run build:client",
-  "outputDirectory": "dist/spa"
+    "buildCommand": "npm run build:client",
+    "outputDirectory": "dist/spa",
+    "framework": null
 }
